<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Liar</string>
    <string name="start">Neues Spiel starten</string>
    <string name="add_players">Spieler hinzufügen</string>
    <string name="instructions">Spielanleitung</string>
    <string name="start_game">Spiel starten</string>
    <string name="rounds">Fragen pro Spieler</string>
    <string name="player">Spieler</string>
    <string name="round">Frage</string>
    <string name="ok">OK</string>
    <string name="next">Weiter</string>
    <string name="not_enough_player_message">Es wurden nicht genug Spieler erstellt. Das Minimum ist %d.</string>
    <string name="player_already_exists">Der Spieler %s existiert bereits.</string>
    <string name="empty"></string>
    <string name="no_player_input">Bitte geben sie einen Namen ein.</string>
    <string name="player_added">Spieler %s hinzugef&#252;gt.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="ranking">Rangliste</string>
   	<string name="loading">Spiel wird geladen.</string>
   	<string name="result_text_for_question">ihre Antwort war %s.</string>
   	<string name="cancel">Abbrechen</string>  
   	<string name="back_to_tile">Zur&#252;ck zum Titelbildschirm?</string>  

    <!-- Strings fuer die EEG-Activity Eigenanalyse -->
    <string name="title_activity_eeg">EegActivity</string>
    <string name="eeg_tv">EEG-Werte</string>
    <string name="label_attention">Attention</string>
    <string name="label_meditation">Meditation</string>
    <string name="label_blink">Blink</string>
    <string name="eeg_blink">EEG Blink</string>
    <string name="eeg_med">EEG Meditation</string>
    <string name="start_eeg_button">Eigenanalyse</string>

    <!-- Strings fuer die EEG-Activity Eigenanalyse -->
    <string name="start_galvanic_button">Eigenanalyse Galvanic Skin</string>
    <string name="title_activity_galvanic">GalvanicActivity</string>
    <string name="galvanic_skin_werte">Galvanic Skin Werte</string>
    <string name="reset_button">Zurücksetzen</string>

    <!-- String fuer den Selbsttest mit beiden Sensoren -->
    <string name="button_liartest">Weiter zur Lügenauswertung</string>
    <string name="title_activity_liar_test">LiarTestActivity</string>
    <string name="label_resistance">Widerstand</string>
    <string name="galvanic_resistance">Widerstand</string>
    <string name="eeg_blink_counter">Anzahl der Blinzler</string>
    <string name="blink_counts">Ihre Blinzler</string>
    <string name="title_activity_galvanic_help">GalvanicHelpActivity</string>
    <string name="do_calibrate">kalibrieren</string>
    <string name="text_result">Ihre kalibrierten Werte</string>
    
    
    <!-- String fuer die Hilfe -->
    <string name="action_help">Hilfe</string>
    <string name="galvanic_help_title">Information</string>
    <string name="galvanic_help">Der Galvanic Skin Sensor misst die Veränderungen des elektrischen Hautleitwiderstandes. Durch eine Elektrode an den Fingern kann gemessen werden, ob sich die Sekretion der Schweißdrüsen verändert. Je geringer der Hautleitwiderstand wird, desto größer ist die allgemeine Aktivierung (Reaktion des autonomen Nervensystems) einer Person.</string>

    
    <!-- Strings for game screen -->
    <string name="truth">wahr</string>  	
   	<string name="lie">gelogen</string>  
	<string name="next_question">Nächste Frage</string>
	<string name="go_to_score">Zur Punkteauswertung</string>
	<string name="next_player">Nächster Spieler</string>
	<string name="setup_bluetooth">Verbindung zu Geräten</string>
</resources>
