<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EegActivity" >

    <TextView
                android:id="@+id/l_att"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_attention" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/eeg_sensor_text_view"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="48dp"
                android:scrollbars="vertical"
                android:text="@string/eeg_tv" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/l_blink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/scrollView1"
        android:layout_marginRight="30dp"
        android:text="@string/label_blink" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>
    
    <TextView
        android:id="@+id/l_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="162dp"
        android:text="@string/label_meditation" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/eeg_meditation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l_med"
        android:layout_alignTop="@+id/l_med"
        android:layout_marginTop="44dp"
        android:text="@string/eeg_med" />

    <TextView
        android:id="@+id/eeg_blink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scrollView1"
        android:layout_alignLeft="@+id/l_blink"
        android:text="@string/eeg_blink" />

</RelativeLayout>
