<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/start_layout_root_container"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <RelativeLayout
        android:id="@+id/start_layout_bottom_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/start_layout_button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start_layout_start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <Button
                android:id="@+id/start_layout_eeg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_eeg_button" />

            <Button
                android:id="@+id/start_layout_galvanic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_galvanic_button" />
            
            <Button
                android:id="@+id/start_layout_rankingc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ranking" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/liar_logo" />

    </RelativeLayout>

</LinearLayout>

