<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LiarTestActivity" >

    <TextView
        android:id="@+id/l_resist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/galvanicPlot"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/label_resistance" />

    <TextView
        android:id="@+id/l_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/l_att"
        android:layout_alignBottom="@+id/l_att"
        android:layout_toRightOf="@+id/l_resist"
        android:text="@string/label_meditation" />

    <TextView
        android:id="@+id/l_att"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/l_resist"
        android:text="@string/label_attention" />

    <com.androidplot.xy.XYPlot
        android:id="@+id/galvanicPlot"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <com.androidplot.xy.XYPlot
        android:id="@+id/eegMeditationPlot"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/l_med"
        android:layout_marginTop="16dp" />

    <com.androidplot.xy.XYPlot
        android:id="@+id/eegAttentionPlot"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignBaseline="@+id/eegMeditationPlot"
        android:layout_alignBottom="@+id/eegMeditationPlot"
        android:layout_toLeftOf="@+id/eegMeditationPlot" />

</RelativeLayout>